# musicplayerOOPLab

./: .gitignore  CMakeLists.txt  authmanager.cpp  authmanager.h  libraryscanner.cpp  libraryscanner.h  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  marqueelabel.cpp  marqueelabel.h  playlist.cpp  playlist.h  track.cpp  track.h  user.cpp  user.h
